# panelizer-tui

./: .gitignore  README.md  panelizer.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  python.yml  release.yml
assets/: icon-28-15.txt  icon-30-16.txt  icon-50-27.txt  icon-50-29.txt  icon-60-37.txt  icon-70-42.txt  icon-80-48.txt  icon-grayscale-100.txt  icon-grayscale-110.txt  icon-grayscale-120.txt  icon-grayscale-30.txt  icon-grayscale-40.txt  icon-grayscale-50.txt  icon-grayscale-60.txt  icon-grayscale-70.txt  icon-grayscale-80.txt  icon-grayscale-90.txt  social-preview.zps
panelizer/: __init__.py  app.py
panelizer/toolkit/: __init__.py  core.py
panelizer/tui/: __init__.py  core.py  dir_picker.py  screen_size.py  state_machine.py
panelizer/utils/: __init__.py  ascii_painter.py
tests/: test_interface.py
textual_neon/: __init__.py
textual_neon/app/: __init__.py  neon_app.py  state_machine.py
textual_neon/assets/: icon-70-17.txt  icon-grayscale-60.txt  icon-grayscale-70.txt  icon.zps
textual_neon/css/: globals.tcss  too_small.tcss
textual_neon/dialogs/: __init__.py  dir_select.py  file_select.py  list_select.py  neon_dialog.py
textual_neon/screens/: __init__.py  done.py  export.py  launch.py  loading.py  too_small.py
textual_neon/utils/: __init__.py  ascii_painter.py  errors.py  paths.py  preferences.py  screen_data.py  settings.py
textual_neon/widgets/: __init__.py  app_level_log.py  neon_log.py  (+19 more)
(+29 files in other folders)
