[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panelizer-tui"
version = "0.1.0"
description = "A TUI (text user interface) tool for laying out instagram-ready carousel panels"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "textual>=0.40.0",
    "textual-fspicker>=0.6.0",
    "pillow>=10.0.0",
    "rich>=13.0.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest~=8.4.1"
]
build = [
    "pyinstaller>=6.0.0"
]

[project.scripts]
panelizer = "panelizer.app:terminal_entry"

[tool.setuptools.packages.find]
where = ["panelizer"]