[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panelizer"
version = "0.1.0"
description = "A TUI (text user interface) tool for laying out instagram-ready carousel panels"
authors = [
    { name = "Ondřej Wiener", email = "ondrej.wiener@gmail.com" }
]
dependencies = [
    "textual>=6.7.0",
    "textual-dev>=1.8.0",
    "textual-fspicker>=0.6.0",
    "pyperclip>=1.10",
    "pillow>=10.0.0",
    "rich>=13.0.0"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest~=9.0.0"
]
build = [
    "pyinstaller>=6.0.0"
]

[project.scripts]
panelizer = "panelizer.app:terminal_entry"

[tool.setuptools.packages.find]
where = ["./panelizer"]